fix navbar spacing

--- a/front_end/ui/css/qa.css
+++ b/front_end/ui/css/qa.css
@@ -2,7 +2,7 @@
 	color: firebrick;
     font-size: 20px;
 }
-body{padding-top:20px;}
+
 /**
  * Oscuro: #283035
  * Azul: #03658c
